decaf-compiler/samples/lex/badbool.decaf.out

*** Error line 5.
True
^^^^
*** syntax error

